<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Everybody Draw!</string>
    <string name="action_settings">Settings</string>
    <string name="sidebar_open">Open paint settings drawer</string>
    <string name="sidebar_close">Close paint settings drawer</string>
    <string name="button_load">Load</string>
    <string name="button_save">Save</string>
    <string name="button_clear">Clear</string>
    <string name="button_undo">Undo</string>
    <string name="button_redo">Redo</string>

    <string-array name="sidebar_titles">
        <item>Brush Texture</item>
        <item>Animation</item>
        <item>Paint</item>
        <item>Interpolator</item>
        <item>Unibrushes</item>
        <item>Hide Controls</item>
        <item>Overlay</item>
    </string-array>
        <string name="button_credits">Credits</string>
        <string name="button_debug">Debug</string>
        <string name="button_replay">Replay</string>

</resources>