<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.gldrawfromscratch.MainActivity" >

    <item
        android:id="@+id/menu_save"
        android:title="@string/button_save"/>
    <item
        android:id="@+id/menu_load"
        android:title="@string/button_load"/>
    <item
        android:id="@+id/menu_replay"
        android:title="@string/button_replay"/>
    <item
        android:id="@+id/menu_clear"
        android:title="@string/button_clear"/>
	  <item
		  android:id="@+id/menu_debug"
		  android:title="@string/button_debug"/>
	  <item
		  android:id="@+id/menu_credits"
		  android:title="@string/button_credits"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

</menu>
